# ISA_DICOM

./: .gitignore  Dockerfile  Dockerfile.light  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
dicom/: __init__.py  dicom.py
examples/File_DICOM/Paziente1/: ANONYMUS_1-1.dcm  ANONYMUS_1-2.dcm
examples/File_DICOM/Paziente2/: ANONYMUS_1-3.dcm  ANONYMUS_1-4.dcm
tests/: test_integration.py  test_property.py  test_unit.py
tests/Data/Acquire/: Image1.wmv
tests/Data/DICOM_1/SOL/: 1-1.txt
tests/Data/DICOM_2/SOL/: 1-2.txt
tests/Data/DICOM_3/DICOM/: 1-3.dcm
tests/Data/DICOM_3/SOL/: 1-3.txt
tests/Data/DICOM_4/DICOM/: 1-4.dcm
tests/Data/DICOM_4/DICOM/OUTPUT/: 1-4.txt
tests/Data/DICOM_4/SOL/: ANONYMUS_1-4.txt
