[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dicom"
version = "0.0.1"
dependencies = [
    "numpy >= 1.25, < 1.30",
    "matplotlib >= 3.7, < 4.0",
    "pydicom >= 2.4, < 3.0",
    "Pillow >= 10.0, < 11.0",
    "opencv-python >= 4.8, < 5.0",
    "scikit-image >= 0.21, < 0.23"
]
requires-python = ">=3.10"
authors = [
  {name = "Dominik Miotla", email = "dominik.miotla@edu.unife.it"}
]
maintainers = [
  {name = "Dominik Miotla", email = "dominik.miotla@du.unife.it"}
]
description = "Medical image processing"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["dicom", "medical imaging", "ultrasound", "ssim"]

[project.scripts]
dicom = "dicom:main"

[tool.setuptools]
packages = ["dicom"]